# cmake

create header file_cmake/: CMakeLists.txt
create header file_cmake/include/: test.h
create header file_cmake/src/: main.c  test.c
create header file_cmake/testlibrary/: CMakeLists.txt
create header file_cmake/testlibrary/include/: library.h
create header file_cmake/testlibrary/src/: library.c
multi_file cmake/multi folder structure/: CMakeLists.txt
multi_file cmake/multi folder structure/adc_include/: adc.h
multi_file cmake/multi folder structure/adc_src/: adc.c
multi_file cmake/multi folder structure/i2c_include/: i2c.h
multi_file cmake/multi folder structure/i2c_src/: i2c.c
multi_file cmake/multi folder structure/spi_src/: spi.c
multi_file cmake/multi folder structure/src/: main.c
multi_file cmake/multi folder structure/uart_include/: uart.h
multi_file cmake/simple folder structure/: CMakeLists.txt
multi_file cmake/simple folder structure/include/: spi.h
multi_file cmake/simple folder structure/src/: main.c  uart.c
practice/makeFile/: CMakeLists.txt  main.c
practice/protocols/: CMakeLists.txt
practice/protocols/ardino/: CMakeLists.txt
practice/protocols/ardino/include/: gpio.h
practice/protocols/ardino/src/: gpio.c
practice/protocols/controller_include/: ardino.h  esp32.h  stm.h
practice/protocols/controller_src/: ardino.c  esp32.c  stm.c
practice/protocols/include/: adc.h  i2c.h  spi.h  uart.h
practice/protocols/src/: adc.c  i2c.c  main.c  spi.c  uart.c
simple cmake/: CMakeLists.txt  main.c
